UI/UX improvements: menu redesign, accessibility, onboarding fixes, first-time user audit
- Add Quit button and Settings to menu with SF Symbols icons
- Add menu bar status badge (green/orange for backend status)
- Fix side panel not showing on session start
- Enhance accessibility labels on menu items
- Fix Escape key to close search in Full mode
- Add focus indicator visibility improvements
- Add export format descriptions and mode tooltips
- Fix onboarding: HF token step now optional (Skip button)
- Remove Beta section from main menu
- Rename technical terms in Settings (ASR Model -> Transcription Model)
- Add first-time user persona audit documenting 60-second value test
- Document UI/UX audit with multi-persona analysis (P0/P1 items)

Deleted files: old folder structure (restructured to flat Sources/ layout)

--- a/docs/flows/AUD-001.md
+++ b/docs/flows/AUD-001.md
@@ -82,7 +82,13 @@
   - Where detected: CGPreflightScreenCaptureAccess() returns false
   - Current handling: Throws CaptureError.permissionDenied
   - User-visible outcome: Session fails with permission error
-  - Evidence: Code: macapp/MeetingListenerApp/Sources/AudioCaptureManager.swift :: guard CGPreflightScreenCaptureAccess() else { throw CaptureError.permissionDenied }
+  - Evidence: Code: AudioCaptureManager.swift line 110-112 (startCapture preflight check)
+
+- ~~Screen recording permission revoked during capture~~ ✅ FIXED:
+  - Where detected: Periodic checkPermissionStatus() every ~100 buffers (~2 seconds)
+  - Current handling: Stops capture, logs error, reports .poor quality
+  - User-visible outcome: Capture stops with clear error indication
+  - Evidence: Code: AudioCaptureManager.swift lines 230-244 (checkPermissionStatus), lines 254-257 (periodic check)
 
 - Unsupported OS version:
   - Where detected: #available(macOS 13, \*) check
@@ -120,11 +126,11 @@
   - User-visible outcome: Brief audio gap
   - Evidence: Code: macapp/MeetingListenerApp/Sources/AudioCaptureManager.swift :: guard let inputBuffer = AVAudioPCMBuffer(...)
 
-- Stream stops unexpectedly:
-  - Where detected: No more sample buffers received
-  - Current handling: No explicit handling, capture appears stopped
-  - User-visible outcome: Audio capture ends
-  - Evidence: Assumed - no explicit stop detection
+- ~~Stream stops unexpectedly~~ ✅ FIXED:
+  - Where detected: SCStreamDelegate.stream(_:didStopWithError:) callback
+  - Current handling: Stream state updated, quality set to .poor, error logged
+  - User-visible outcome: Capture state properly reflects disconnection
+  - Evidence: Code: AudioCaptureManager.swift lines 76-84 (onStreamStopped callback), 517-522 (SCStreamDelegate implementation)
 
 ## Data and Storage
 
@@ -135,14 +141,69 @@
 ## Observability
 
 - Debug logging on stream start/stop
-- Audio quality metrics (RMS, clipping, silence ratios)
+- Audio quality metrics (RMS, clipping, silence ratios) - **Thread-safe via qualityLock**
 - Sample count and screen frame count updates
-- No structured logging or metrics emission
+- Thread-safe quality metrics access via `currentQualityMetrics` getter
+- Thread-safe stream state access via `streamActive` getter
+- Structured logging for stream disconnection events
+- Stream state tracking with `StreamState` class
+- **Permission revocation detection with periodic checks (~2 seconds)**
+- **Structured logging for permission errors**
 
 ## Open Questions and Follow-up Tasks
 
-- Thread safety of quality EMA updates (updated from capture thread without sync)
-- Memory leak potential if stream not properly stopped
-- No handling for display disconnection during capture
-- Test gaps: Permission revocation during active capture, display changes
+- ~~Thread safety of quality EMA updates~~ ✅ FIXED: Added qualityLock for thread-safe EMA updates
+- ~~Memory leak potential if stream not properly stopped~~ ✅ FIXED: Added stream state tracking with proper cleanup
+- ~~No handling for display disconnection during capture~~ ✅ FIXED: Implemented SCStreamDelegate to detect stream stops
+- ~~Permission revocation during active capture~~ ✅ FIXED: Added checkPermissionStatus() with periodic checks
+### Implementation Items (Complete)
+- ~~Thread safety of quality EMA updates~~ ✅ FIXED
+- ~~Memory leak potential if stream not properly stopped~~ ✅ FIXED  
+- ~~Stream disconnection detection~~ ✅ FIXED (via SCStreamDelegate)
+- ~~Permission revocation detection~~ ✅ FIXED (periodic checks)
+
+### Assessment: Display Changes During Capture
+**Current State:** ScreenCaptureKit captures from a specific `CGDirectDisplayID`. If that display is disconnected, the stream stops (handled by SCStreamDelegate). If the user switches displays (e.g., laptop to external monitor), the stream continues capturing from the original display ID until stopped.
+
+**Decision: DEFER** ❌
+- **Implementation:** Would require `CGDisplayRegisterReconfigurationCallback` with Core Graphics
+- **Complexity:** Moderate-High (handle add/remove/move flags, restart capture safely)
+- **User Impact:** Low - users rarely switch displays mid-meeting; typically restart session
+- **Workaround:** Stream stops cleanly on disconnect; manual restart handles display switches
+- **Priority:** P2 - Nice to have, not launch-critical
+
+### Future Considerations (Post-Launch)
+- Display change detection with automatic capture restart
+- UI notification when display becomes unavailable
+- Option to select which display to capture from
+
+### Test Gaps
+- Long-running permission revocation scenarios
+- Rapid display connect/disconnect cycles
+
+## Implementation Evidence (2026-02-12)
+
+### Thread Safety Fixes
+- **qualityLock declaration**: `AudioCaptureManager.swift` line 28
+- **Locked EMA updates**: `AudioCaptureManager.swift` lines 457-465 (updateAudioQuality)
+- **currentQualityMetrics getter**: `AudioCaptureManager.swift` lines 98-104
+- **StreamState class**: `AudioCaptureManager.swift` lines 555-567
+
+### Display Disconnection Handling
+- **onStreamStopped callback**: `AudioCaptureManager.swift` lines 87-95
+- **SCStreamDelegate implementation**: `AudioCaptureManager.swift` lines 541-546
+- **AudioSampleHandler.onStreamStopped**: `AudioCaptureManager.swift` line 512
+
+### Stream State Tracking
+- **streamState declaration**: `AudioCaptureManager.swift` line 47
+- **Stream active on start**: `AudioCaptureManager.swift` line 141 (startCapture)
+- **Stream inactive on stop**: `AudioCaptureManager.swift` line 204 (stopCapture)
+- **streamActive getter**: `AudioCaptureManager.swift` lines 106-108
+
+### Permission Revocation Detection
+- **CaptureError.permissionDenied/Revoked**: `AudioCaptureManager.swift` lines 553-568
+- **Permission check on start**: `AudioCaptureManager.swift` lines 110-112
+- **checkPermissionStatus() method**: `AudioCaptureManager.swift` lines 230-244
+- **Periodic check (every 100 buffers)**: `AudioCaptureManager.swift` lines 254-257
+- **sampleBuffersProcessed counter**: `AudioCaptureManager.swift` line 60
 
