--- a/docs/flows/AUD-002.md
+++ b/docs/flows/AUD-002.md
@@ -110,21 +110,27 @@
 
 - Buffer allocation failure:
   - Where detected: AVAudioPCMBuffer init returns nil
-  - Current handling: Frame dropped silently
-  - User-visible outcome: Brief audio gap
-  - Evidence: Code: macapp/MeetingListenerApp/Sources/MicrophoneCaptureManager.swift :: guard let outputBuffer = AVAudioPCMBuffer(...)
+  - Current handling: ✅ Logs error, increments framesDropped counter, returns early
+  - User-visible outcome: Brief audio gap, logged for debugging
+  - Evidence: Code: `MicrophoneCaptureManager.swift:104-109`
 
 - Conversion failure:
-  - Where detected: converter.convert returns false
-  - Current handling: Frame dropped silently
-  - User-visible outcome: Brief audio gap
-  - Evidence: Assumed - code doesn't check convert result
+  - Where detected: converter.convert returns error status
+  - Current handling: ✅ Logs error with details, increments framesDropped counter
+  - User-visible outcome: Brief audio gap, logged for debugging  
+  - Evidence: Code: `MicrophoneCaptureManager.swift:119-127`
 
 - Device disconnected:
   - Where detected: No more buffers received
-  - Current handling: No explicit handling
+  - Current handling: No explicit handling (macOS limitation - AVAudioSession is iOS-only)
   - User-visible outcome: Audio capture stops
-  - Evidence: Assumed - no explicit device monitoring
+  - Evidence: Noted in code comments
+
+- Permission revoked during capture:
+  - Where detected: `checkPermissionStatus()` called every ~2 seconds
+  - Current handling: ✅ Logs error, stops capture, reports error via onError callback
+  - User-visible outcome: Session ends with permission error
+  - Evidence: Code: `MicrophoneCaptureManager.swift:144-157`
 
 ## Data and Storage
 
@@ -135,14 +141,79 @@
 
 ## Observability
 
-- Debug logging on start/stop
-- Audio level updates via callback
-- No structured logging or metrics
+- ✅ Debug logging on start/stop (NSLog + StructuredLogger)
+- ✅ Audio level updates via callback (thread-safe with NSLock)
+- ✅ Structured logging for lifecycle events (via Task { @MainActor })
+- ✅ Metrics: framesProcessed, framesDropped, bufferUnderruns
+- ✅ Error logging with context (format details, frame counts)
+- ✅ Slow processing detection (>10ms threshold)
+- ✅ Periodic permission status checks
+
+## Improvements Made (2026-02-12)
+
+### ✅ Thread safety of level EMA updates
+- Added `levelLock` NSLock for thread-safe level EMA updates
+- Evidence: `MicrophoneCaptureManager.swift:16` - `private let levelLock = NSLock()`
+
+### ✅ Permission revocation detection
+- Added `checkPermissionStatus()` method
+- Called periodically every ~2 seconds (every 100 buffers)
+- Stops capture and reports error if permission revoked
+- Evidence: `MicrophoneCaptureManager.swift:144-157`
+
+### ✅ Buffer allocation/conversion error handling
+- Buffer allocation failures now logged and counted as dropped frames
+- Conversion failures now logged with error details
+- Evidence: `MicrophoneCaptureManager.swift:104-109` (buffer), `MicrophoneCaptureManager.swift:119-127` (conversion)
+
+### ✅ Metrics tracking
+- Added `framesProcessed`, `framesDropped`, `bufferUnderruns` counters
+- Thread-safe access via `metricsLock`
+- Public `getMetrics()` method for monitoring
+- Evidence: `MicrophoneCaptureManager.swift:33-36`, `MicrophoneCaptureManager.swift:285-301`
+
+### ✅ Structured logging
+- Lifecycle events logged via StructuredLogger
+- Real-time errors logged via NSLog (background thread safe)
+- Error context includes format details, frame counts
+- Evidence: Throughout `MicrophoneCaptureManager.swift`
+
+### ⚠️ Device change monitoring (macOS limitation)
+- AVAudioSession is iOS-only, not available on macOS
+- macOS would require AudioObjectPropertyListener implementation
+- Not implemented - documented as known limitation
 
 ## Open Questions and Follow-up Tasks
 
-- Thread safety of level EMA updates
-- No handling for device changes during capture
-- Potential buffer overflow if processing slower than input
-- Test gaps: Device hot-swap, permission revocation during capture
+### Implementation Items (Complete)
+- ~~Thread safety of level EMA updates~~ ✅ FIXED
+- ~~Permission revocation detection~~ ✅ FIXED
+- ~~Buffer allocation/conversion error handling~~ ✅ FIXED
+- ~~Metrics tracking~~ ✅ FIXED
+- ~~Structured logging~~ ✅ FIXED
+
+### Assessment: Device Change Monitoring
+**Current State:** AUD-008 (DeviceHotSwapManager) already handles microphone device disconnect/connect via `AVCaptureDeviceWasConnected/Disconnected` notifications. This covers the primary hot-swap use case.
+
+**What was referenced as missing:**
+- Real-time default device change detection (when user switches input in System Settings without disconnect)
+- Would require `AudioObjectPropertyListener` with `kAudioHardwarePropertyDefaultInputDevice`
+
+**Decision: DEFER** ❌
+- **Implementation:** Would require Core Audio `AudioObjectPropertyListener` framework
+- **Complexity:** High (Core Audio callbacks, audio object lifecycle management)
+- **User Impact:** Low - AUD-008's 2s periodic verification catches most changes; user switching default mic mid-capture is rare
+- **Workaround:** Existing 2s periodic check in AUD-008 provides acceptable coverage
+- **Risk:** Core Audio callbacks can introduce instability if not handled carefully
+- **Priority:** P2 - Enhancement, not launch-critical
+
+### Known Limitations
+- Real-time default device property monitoring deferred (requires Core Audio `AudioObjectPropertyListener`)
+- Periodic verification (2s) in AUD-008 provides acceptable coverage for most use cases
+
+### Test Gaps (Future)
+- [ ] Add unit tests for metrics tracking (getMetrics(), framesDropped, etc.)
+- [ ] Add unit tests for permission revocation handling (MicrophoneCaptureManager)
+- [ ] Test buffer overflow scenarios under heavy load
+- [ ] End-to-end device change during active session (integration with AUD-008)
 
