--- a/docs/flows/AUD-003.md
+++ b/docs/flows/AUD-003.md
@@ -132,9 +132,16 @@
 
 ## Open Questions and Follow-up Tasks
 
-- No automatic failback to primary once switched to backup
-- Failover events accumulate without cleanup (memory leak)
-- No hysteresis to prevent rapid switching
+- ~~No automatic failback to primary once switched to backup~~ ✅ FIXED: Implemented automatic failback with 10s quality stabilization period
+- ~~Failover events accumulate without cleanup~~ ✅ FIXED: Ring buffer with max 100 events
+- ~~No hysteresis to prevent rapid switching~~ ✅ FIXED: 5-second cooldown between failovers
 - Silence threshold (2s) may be too sensitive for natural pauses
 - Test gaps: Long-running sessions, memory usage, thread safety
+
+## Implementation Evidence
+
+- Automatic failback: `RedundantAudioCaptureManager.swift` lines 94-96 (failbackStabilizationPeriod), lines 339-354 (checkForFailback method), lines 359-361 (primaryQualityGoodSince tracking)
+- Ring buffer: `RedundantAudioCaptureManager.swift` lines 93 (maxFailoverEvents), lines 396-402 (appendFailoverEvent helper)
+- Hysteresis: `RedundantAudioCaptureManager.swift` lines 92 (failoverCooldown), lines 324-328 (cooldown check)
+- New failover reason: `RedundantAudioCaptureManager.swift` line 117 (qualityRestored case)
 
