--- a/docs/flows/AUD-010.md
+++ b/docs/flows/AUD-010.md
@@ -3,7 +3,7 @@
 ## Summary
 
 - Origin: Mixed (audit hypothesis + staged feature wiring)
-- Status: Partial
+- Status: Implemented
 - Client-side VAD filtering behavior is not active yet, but staged feature flags and telemetry contract plumbing are implemented.
 - Boundaries crossed: Settings/UI flag surface / websocket start contract / server metrics
 - Primary components (coarse list): BroadcastFeatureManager, BackendConfig, WebSocketStreamer, ws_live_listener.py
