--- a/docs/flows/OBS-016.md
+++ b/docs/flows/OBS-016.md
@@ -1,6 +1,7 @@
 # OBS-016 Concurrency Limiting Flow
 
 ## Summary
+
 - Origin: Code-only
 - Status: Implemented
 - Limits concurrent ASR sessions and manages audio chunk queues with backpressure to prevent resource exhaustion. Uses global session semaphore (max 10) and per-source bounded priority queues (mic: 100, system: 50).
@@ -8,10 +9,12 @@
 - Primary components (coarse list): ConcurrencyController (Python), ws_live_listener.py (Python), SessionState (Python)
 
 ## Triggers and Preconditions
+
 - Triggers: WebSocket connection attempt, audio chunk reception during active session
 - Preconditions: Backend server running, concurrency controller initialized, session slot available
 
 ## Sequence (Happy Path)
+
 1. WebSocket connection accepted and authenticated
    - Evidence:
      - Code: server/api/ws_live_listener.py :: @router.websocket("/ws/live-listener") :: await websocket.accept()
@@ -53,11 +56,13 @@
      - Docs: docs/IMPLEMENTATION_COMPLETE_SUMMARY.md :: Global session semaphore (max 10)
 
 ## Inputs and Outputs
+
 - Inputs: WebSocket connection requests, audio chunks with source metadata
 - Outputs: Session acceptance/rejection, queued chunks for processing, dropped frame counts
 - Side effects (writes, network calls, model loads, UI state changes): Session slots held in semaphore, chunks buffered in priority queues, dropped frame counters incremented
 
 ## Failure Modes
+
 - Failure: Session acquisition timeout (5s)
   - Where detected: asyncio.wait_for(controller.acquire_session(), timeout=5.0) raises TimeoutError
   - Current handling (as evidenced): Connection rejected with capacity message
@@ -77,10 +82,10 @@
   - Evidence: server/api/ws_live_listener.py :: if controller.should_drop_source(source): logger.warning(f"Dropping {source} due to extreme overload")
 
 - Failure: Inference semaphore acquisition fails
-  - Where detected: await self._infer_sem.acquire() blocks indefinitely
+  - Where detected: await self.\_infer_sem.acquire() blocks indefinitely
   - Current handling (as evidenced): Processing stalls until semaphore available
   - User-visible outcome (if any): Delayed transcription, potential timeouts
-  - Evidence: server/services/concurrency_controller.py :: await self._infer_sem.acquire()
+  - Evidence: server/services/concurrency_controller.py :: await self.\_infer_sem.acquire()
 
 - Failure: Session release fails
   - Where detected: controller.release_session() called but semaphore corrupted
@@ -89,18 +94,21 @@
   - Evidence: server/api/ws_live_listener.py :: controller.release_session(); logger.debug(f"Released session slot")
 
 ## Data and Storage
+
 - What data is produced/consumed: Audio chunks with priority metadata, session slots, queue depths
 - Where it is stored (DB/files/userData/etc.): In-memory asyncio.Semaphore, asyncio.PriorityQueue objects
 - Retention / deletion controls (if documented): Chunks processed and discarded, session slots released on disconnect
 
 ## Observability
+
 - Logs/events emitted: Session acquisition/release debug logs, dropped frame warnings, overload warnings
 - Correlation IDs / session IDs (if any): Session ID in logs
 - Metrics/traces (if any): Queue depths, dropped frames, backpressure levels tracked in ConcurrencyMetrics
-Evidence: server/services/concurrency_controller.py :: logger.warning(f"Dropped oldest {dropped.source} chunk"); server/api/ws_live_listener.py :: logger.debug(f"Released session slot")
+  Evidence: server/services/concurrency_controller.py :: logger.warning(f"Dropped oldest {dropped.source} chunk"); server/api/ws_live_listener.py :: logger.debug(f"Released session slot")
 
 ## Open Questions and Follow-up Tasks
+
 - Questions that cannot be answered from current evidence: How are chunks retrieved from concurrency controller queues for processing? Is there a separate processing loop?
 - Documentation gaps to fill: Integration between concurrency controller queues and ASR processing pipeline
 - Test gaps to add (note only, no implementation): Session limit enforcement, queue overflow behavior, priority processing verification</content>
-<parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/OBS-016.md
+  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/OBS-016.md
