--- a/docs/flows/SEC-015.md
+++ b/docs/flows/SEC-015.md
@@ -1,6 +1,7 @@
 # SEC-015 Local Documents Privacy
 
 ## Summary
+
 - Origin: Mixed
 - Status: Implemented
 - Ensures user-selected local documents for RAG context remain private: files selected locally, content processed locally, stored in user's home directory, protected by authentication, never transmitted externally.
@@ -8,10 +9,12 @@
 - Primary components (coarse list): NSOpenPanel (Swift), AppState.indexContextDocumentAsync (Swift), documents.py API (Python), LocalRAGStore (Python)
 
 ## Triggers and Preconditions
+
 - Triggers: User clicks "Upload Document..." in context panel
 - Preconditions: Backend server running, user has configured auth token (optional), user has local text files to index
 
 ## Sequence (Happy Path)
+
 1. User initiates document upload via NSOpenPanel file picker
    - Evidence:
      - Code: macapp/MeetingListenerApp/Sources/SidePanel/Full/SidePanelFullViews.swift :: pickContextFileForIndexing() :: NSOpenPanel with allowedContentTypes [.plainText, .json, .commaSeparatedText]
@@ -34,12 +37,12 @@
 
 5. Server validates authentication token before processing
    - Evidence:
-     - Code: server/api/documents.py :: _require_http_auth(request) :: checks token via hmac.compare_digest
+     - Code: server/api/documents.py :: \_require_http_auth(request) :: checks token via hmac.compare_digest
      - Docs: docs/flow-atlas-20260211.md :: SEC-006 Documents API Authentication
 
 6. Document indexed and stored locally in ~/.echopanel/rag_store.json
    - Evidence:
-     - Code: server/services/rag_store.py :: _default_store_path() :: Path.home() / ".echopanel" / "rag_store.json"
+     - Code: server/services/rag_store.py :: \_default_store_path() :: Path.home() / ".echopanel" / "rag_store.json"
      - Docs: docs/audit/security-privacy-boundaries-20260211.md :: SP-011 Config Storage
 
 7. Document appears in UI context library for local querying
@@ -48,11 +51,13 @@
      - Docs: docs/flow-atlas-20260211.md :: EXT-015 Context Document Indexing (RAG)
 
 ## Inputs and Outputs
+
 - Inputs: User-selected local file path, file content (text), auth token
 - Outputs: Indexed document metadata, updated context document list in UI
 - Side effects (writes, network calls, model loads, UI state changes): Document chunks stored in local JSON file, UI updates with new document
 
 ## Failure Modes
+
 - Failure: File read fails (permissions, encoding, size >250k chars)
   - Where detected: loadTextFile() throws error
   - Current handling (as evidenced): UI shows error message "Indexing failed: <error>"
@@ -66,7 +71,7 @@
   - Evidence: macapp/MeetingListenerApp/Sources/AppState.swift :: catch { contextStatusMessage = "Indexing failed: \(error.localizedDescription)" }
 
 - Failure: Server auth validation fails
-  - Where detected: _require_http_auth() raises HTTPException(401)
+  - Where detected: \_require_http_auth() raises HTTPException(401)
   - Current handling (as evidenced): 401 response returned
   - User-visible outcome (if any): HTTP error in client
   - Evidence: server/api/documents.py :: raise HTTPException(status_code=401, detail="Unauthorized")
@@ -84,18 +89,21 @@
   - Evidence: macapp/MeetingListenerApp/Sources/AppState.swift :: if text.count > 250_000 { contextStatusMessage = "File too large..." }
 
 ## Data and Storage
+
 - What data is produced/consumed: Document text content, metadata (title, source path, chunks)
 - Where it is stored (DB/files/userData/etc.): Local JSON file at ~/.echopanel/rag_store.json
 - Retention / deletion controls (if documented): Documents persist until explicitly deleted via API, no automatic cleanup
 
 ## Observability
+
 - Logs/events emitted: Status messages in UI, no server-side logging found
 - Correlation IDs / session IDs (if any): None
 - Metrics/traces (if any): None
-Evidence: No logging in document indexing code paths
+  Evidence: No logging in document indexing code paths
 
 ## Open Questions and Follow-up Tasks
+
 - Questions that cannot be answered from current evidence: Are there any size limits on total stored documents? Is there compression or encryption of stored documents?
 - Documentation gaps to fill: User guide for document privacy guarantees, file format support details
 - Test gaps to add (note only, no implementation): Privacy verification (documents don't leave localhost), file permission edge cases, large document handling</content>
-<parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/SEC-015.md
+  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/SEC-015.md
