--- a/docs/flows/MOD-013.md
+++ b/docs/flows/MOD-013.md
@@ -1,6 +1,7 @@
 # MOD-013 Fallback Provider Switching
 
 ## Summary
+
 - Origin: Code-only
 - Status: Implemented
 - Automatic switching to fallback ASR provider when current provider fails, triggered by error reporting in degrade ladder system.
@@ -8,12 +9,15 @@
 - Primary components (coarse list): DegradeLadder, ASRProvider
 
 ## Triggers and Preconditions
+
 - Triggers (user action, event, schedule, startup, etc.): report_provider_error() called on DegradeLadder with Exception
 - Preconditions (permissions, settings flags, availability, model cached, etc.): Fallback provider configured, current degrade level < FAILOVER
 
 ## Sequence (Happy Path)
+
 Use numbered sequence. Each step must include evidence.
 For each step:
+
 1. <what happens>
    - Evidence:
      - Code: path :: symbol/event/string
@@ -24,29 +28,32 @@ For each step:
    - Evidence:
      - Code: server/services/degrade_ladder.py :: logger.error(f"Provider error: {error}"); if self.fallback_provider and self.state.level < DegradeLevel.FAILOVER
 
-2. _degrade_to(FAILOVER) transitions state to FAILOVER level
+1. \_degrade_to(FAILOVER) transitions state to FAILOVER level
    - Evidence:
-     - Code: server/services/degrade_ladder.py :: return await self._degrade_to(DegradeLevel.FAILOVER)
+     - Code: server/services/degrade_ladder.py :: return await self.\_degrade_to(DegradeLevel.FAILOVER)
 
-3. DegradeAction.apply() calls _action_failover()
+1. DegradeAction.apply() calls \_action_failover()
    - Evidence:
-     - Code: server/services/degrade_ladder.py :: apply=self._action_failover
+     - Code: server/services/degrade_ladder.py :: apply=self.\_action_failover
 
-4. _action_failover() switches self.provider to self.fallback_provider
+1. \_action_failover() switches self.provider to self.fallback_provider
    - Evidence:
      - Code: server/services/degrade_ladder.py :: self.provider = self.fallback_provider
 
-5. Logs FAILOVER warning with new provider name
+1. Logs FAILOVER warning with new provider name
    - Evidence:
      - Code: server/services/degrade_ladder.py :: logger.warning(f"FAILOVER: Switching to {self.fallback_provider.name}")
 
 ## Inputs and Outputs
+
 - Inputs: Exception object from failed provider
 - Outputs: Tuple of (DegradeLevel.FAILOVER, DegradeAction for failover)
 - Side effects (writes, network calls, model loads, UI state changes): Provider reference switched, subsequent ASR calls use fallback provider
 
 ## Failure Modes
+
 List 5–10 realistic failures:
+
 - Failure: No fallback provider configured
   - Where detected: report_provider_error()
   - Current handling (as evidenced): Returns current level, None action
@@ -72,18 +79,21 @@ List 5–10 realistic failures:
   - Evidence: server/services/degrade_ladder.py :: self.provider = self.fallback_provider (immediate assignment)
 
 ## Data and Storage
+
 - What data is produced/consumed: Provider error exceptions, degrade level transitions
 - Where it is stored (DB/files/userData/etc.): In-memory DegradeState (level, actions_applied)
 - Retention / deletion controls (if documented): State retained during session, reset on session end
 
 ## Observability
+
 - Logs/events emitted: Error log on provider failure, warning log on failover switch
 - Correlation IDs / session IDs (if any): None evidenced
 - Metrics/traces (if any): Degrade level changes tracked in state
-Evidence required: server/services/degrade_ladder.py :: logger.error/logger.warning calls
+  Evidence required: server/services/degrade_ladder.py :: logger.error/logger.warning calls
 
 ## Open Questions and Follow-up Tasks
+
 - Questions that cannot be answered from current evidence: How does UI indicate provider switch?
 - Documentation gaps to fill: Fallback provider configuration and prioritization
 - Test gaps to add (note only, no implementation): Multi-level fallback chains, switch timing impact</content>
-<parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/MOD-013.md
+  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/MOD-013.md
