--- a/docs/flows/OBS-023.md
+++ b/docs/flows/OBS-023.md
@@ -1,6 +1,7 @@
 # OBS-023 Source Drop Decision Flow (Extreme Overload)
 
 ## Summary
+
 - Origin: Code-only
 - Status: Implemented
 - Decision logic to drop audio sources under extreme backpressure conditions, prioritizing microphone audio over system audio during overload.
@@ -8,12 +9,15 @@
 - Primary components (coarse list): ConcurrencyController
 
 ## Triggers and Preconditions
+
 - Triggers (user action, event, schedule, startup, etc.): Audio chunk received for processing
 - Preconditions (permissions, settings flags, availability, model cached, etc.): Backpressure level is CRITICAL or OVERLOADED
 
 ## Sequence (Happy Path)
+
 Use numbered sequence. Each step must include evidence.
 For each step:
+
 1. <what happens>
    - Evidence:
      - Code: path :: symbol/event/string
@@ -24,29 +28,32 @@ For each step:
    - Evidence:
      - Code: server/api/ws_live_listener.py :: if controller.should_drop_source(source):
 
-2. get_backpressure_level() determines current level based on queue fill ratios
+1. get_backpressure_level() determines current level based on queue fill ratios
    - Evidence:
      - Code: server/services/concurrency_controller.py :: def get_backpressure_level(self) -> BackpressureLevel:
 
-3. If level == OVERLOADED and source != "mic", return True (drop)
+1. If level == OVERLOADED and source != "mic", return True (drop)
    - Evidence:
      - Code: server/services/concurrency_controller.py :: if level == BackpressureLevel.OVERLOADED: return source != "mic"
 
-4. If level == CRITICAL and source == "system", return True (drop)
+1. If level == CRITICAL and source == "system", return True (drop)
    - Evidence:
      - Code: server/services/concurrency_controller.py :: if level == BackpressureLevel.CRITICAL: return source == "system"
 
-5. Audio chunk is dropped, dropped_frames counter incremented, warning logged
+1. Audio chunk is dropped, dropped_frames counter incremented, warning logged
    - Evidence:
      - Code: server/api/ws_live_listener.py :: state.dropped_frames += 1; logger.warning(f"Dropping {source} due to extreme overload")
 
 ## Inputs and Outputs
+
 - Inputs: Audio source type ("mic" or "system"), current queue fill ratios
 - Outputs: Boolean decision to drop the source
 - Side effects (writes, network calls, model loads, UI state changes): Increments dropped_frames counter, emits warning log
 
 ## Failure Modes
+
 List 5–10 realistic failures:
+
 - Failure: Backpressure level calculation fails
   - Where detected: get_backpressure_level()
   - Current handling (as evidenced): Uses default NORMAL level, no exception handling
@@ -54,10 +61,10 @@ List 5–10 realistic failures:
   - Evidence: server/services/concurrency_controller.py :: max_fill = max(fill_ratios) if fill_ratios else 0 (no try/catch)
 
 - Failure: Queue size check fails
-  - Where detected: _get_queue_fill_ratio()
+  - Where detected: \_get_queue_fill_ratio()
   - Current handling (as evidenced): Returns 0.0 for missing queues
   - User-visible outcome (if any): Underestimates backpressure
-  - Evidence: server/services/concurrency_controller.py :: if source not in self._queues: return 0.0
+  - Evidence: server/services/concurrency_controller.py :: if source not in self.\_queues: return 0.0
 
 - Failure: State object missing dropped_frames attribute
   - Where detected: getattr(state, 'dropped_frames', 0)
@@ -72,18 +79,21 @@ List 5–10 realistic failures:
   - Evidence: server/api/ws_live_listener.py :: logger.warning(f"Dropping {source} due to extreme overload")
 
 ## Data and Storage
+
 - What data is produced/consumed: Queue fill ratios, backpressure level, dropped frame counts
-- Where it is stored (DB/files/userData/etc.): In-memory in ConcurrencyController (_queues, _backpressure_level, _overload_start_time)
+- Where it is stored (DB/files/userData/etc.): In-memory in ConcurrencyController (\_queues, \_backpressure_level, \_overload_start_time)
 - Retention / deletion controls (if documented): Data retained in memory during session, reset on controller recreation
 
 ## Observability
+
 - Logs/events emitted: Warning log "Dropping {source} due to extreme overload"
 - Correlation IDs / session IDs (if any): None evidenced
 - Metrics/traces (if any): dropped_frames counter incremented
-Evidence required: server/api/ws_live_listener.py :: logger.warning; state.dropped_frames += 1
+  Evidence required: server/api/ws_live_listener.py :: logger.warning; state.dropped_frames += 1
 
 ## Open Questions and Follow-up Tasks
+
 - Questions that cannot be answered from current evidence: How does UI reflect dropped frames?
 - Documentation gaps to fill: User-visible indicators of audio dropping
 - Test gaps to add (note only, no implementation): Decision logic for different source combinations, backpressure level transitions</content>
-<parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/OBS-023.md
+  <parameter name="filePath">/Users/pranay/Projects/EchoPanel/docs/flows/OBS-023.md
