--- a/docs/flows/SEC-013.md
+++ b/docs/flows/SEC-013.md
@@ -1,6 +1,7 @@
 # SEC-013 Data Retention & Cleanup
 
 ## Summary
+
 - Origin: Doc-only
 - Status: Hypothesized (partial implementation)
 - 1–2 sentence description: Implements automatic cleanup policies for stored session data, debug artifacts, and temporary files to prevent indefinite retention of sensitive information.
@@ -8,10 +9,12 @@
 - Primary components (coarse list): SessionStore.swift, ws_live_listener.py (partial)
 
 ## Triggers and Preconditions
+
 - Triggers: Session end, periodic cleanup timers, storage threshold exceeded
 - Preconditions: Configurable retention policies defined, cleanup permissions available
 
 ## Sequence (Happy Path)
+
 1. Session ends and data is saved to disk
    - Evidence:
      - Code: macapp/MeetingListenerApp/Sources/SessionStore.swift :: saveSessionState() (line 100)
@@ -26,17 +29,19 @@
      - Code: macapp/MeetingListenerApp/Sources/SessionStore.swift :: deleteSession() (line 265)
 5. Clean up debug artifacts (audio dumps) based on bounded policy
    - Evidence:
-     - Code: server/api/ws_live_listener.py :: _cleanup_audio_dump_dir() (partial implementation)
+     - Code: server/api/ws_live_listener.py :: \_cleanup_audio_dump_dir() (partial implementation)
 6. Update storage metrics and log cleanup actions
    - Evidence:
      - Assumed: Metrics not implemented
 
 ## Inputs and Outputs
+
 - Inputs: Retention policy configuration (max age, max sessions, max storage)
 - Outputs: Cleanup logs, freed storage space
 - Side effects (writes, network calls, model loads, UI state changes): File deletions, storage reclamation
 
 ## Failure Modes
+
 - Failure: File deletion fails (permissions, file locked)
   - Where detected: deleteSession() or cleanup functions
   - Current handling: (Hypothesized) Log error, skip, retry later
@@ -54,17 +59,20 @@
   - Evidence: Assumed based on session lifecycle
 
 ## Data and Storage
+
 - What data is produced/consumed: Session files, debug dumps, temporary artifacts
 - Where it is stored (DB/files/userData/etc.): Application Support directory, temp directories
 - Retention / deletion controls: (Partial) Debug dumps have age/size limits; sessions persist indefinitely
 
 ## Observability
+
 - Logs/events emitted: Cleanup actions, failures, storage metrics
 - Correlation IDs / session IDs: Session IDs in deletion logs
 - Metrics/traces: (Hypothesized) Storage usage, cleanup frequency
 - Evidence: macapp/MeetingListenerApp/Sources/SessionStore.swift :: NSLog calls (line 274)
 
 ## Open Questions and Follow-up Tasks
+
 - Questions: What retention policies should apply (time-based, size-based, user-configurable)? How to handle exported data?
 - Documentation gaps: User-facing data retention settings, privacy policy updates
 - Test gaps: Cleanup policy testing, data recovery after premature deletion
